<resources>
	<string name="bigture_app_name">Bigture</string>
	<string name="app_id">471489659589010</string>
	<string name="master_email">hello@clockworks.co.kr</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_infocenter">Info center</string>
	<string name="menu_sketchbook">Sketchbook</string>
	<string name="menu_contest">Contest</string>
	<string name="menu_artworks">Artworks</string>
	<string name="menu_experts">Expert</string>
	<string name="message_backkey_to_exit"><![CDATA[You will exit the app if you click "back" once more.]]></string>
	<string name="message_fail_to_delete_artwork">Fail to delete artwork, please try again.</string>
    <string name="msg_upload_error">Image upload fail!</string>
    <string name="message_reported">Reported!</string>
    <string name="error_common">Fail in operation, Please try again later.</string>
    <string name="error_upload">Fail to upload data.</string>
	<string name="label_recent">Recent</string>
	<string name="label_popular">Popular</string>
	<string name="submenu_take_picture">Take a picture</string>
	<string name="submenu_camera_roll">From Gallery</string>
	<string name="common_tab_all">All</string>
	<string name="common_tab_collections">Collections</string>
	<string name="common_lb_menu_activity">Activity</string>
	<string name="common_lb_menu_mybigture">My Bigture</string>
	<string name="common_lb_menu_artstory">Art Story</string>
	<string name="common_lb_menu_artclass">Art Class</string>
	<string name="common_lb_datetime_today">Today</string>
	<string name="common_lb_datetime_yesterday">Yesterday</string>
	<string name="common_lb_datetime_dateform_01">MMM d, yyyy</string>
	<string name="common_lb_datetime_dateform_02">MM-dd-yyyy</string>
	<string name="common_lb_datetime_dateform_03">MMM d, yyyy</string>
	<string name="common_lb_datetime_dateform_04">MMM d, yyyy ~ MMM d, yyyy</string>
	<string name="common_lb_datetime_now">just now</string>
	<string name="common_lb_datetime_min_ago">1 minute ago</string>
	<string name="common_lb_datetime_mins_ago">$d minutes ago</string>
	<string name="common_lb_datetime_hour_ago">1 hour ago</string>
	<string name="common_lb_datetime_hours_ago">$d hours ago</string>
	<string name="common_lb_datetime_timeform_01">tt hh:mm</string>
	<string name="common_lb_datetime_timeform_02">hh:mm tt </string>
	<string name="common_lb_refresh">Release to Update</string>
	<string name="common_lb_updating">Updating...</string>
	<string name="common_lb_select_artworks">Select from my artworks</string>
	<string name="common_lb_draw_now">Draw now</string>
	<string name="common_lb_terms">따로 문서로 제공</string>
	<string name="common_lb_privacy">따로 문서로 제공</string>
	<string name="common_tp_network_err"><![CDATA[Please check your internet connection or try again later]]></string>
	<string name="common_tp_enter_title">Please input title.</string>
	<string name="common_tp_collection_add">You added this picture into your collection.</string>
	<string name="common_tp_collection_del">You deleted this picture from your collection.</string>
	<string name="common_btn_ok">OK</string>
	<string name="common_btn_cancel">Cancel</string>
	<string name="common_btn_yes">Yes</string>
	<string name="common_btn_no">No</string>
	<string name="common_btn_submit">Submit</string>
	<string name="common_btn_close">Close</string>
	<string name="common_btn_prev">Previous</string>
	<string name="common_btn_next">Next</string>
	<string name="common_btn_back">Back</string>
	<string name="common_btn_except">Except</string>
	<string name="common_btn_delete">Delete</string>
	<string name="common_po_all">All</string>
	<string name="common_po_edit">Edit</string>
	<string name="common_po_del">Delete</string>
	<string name="common_po_ongoing">Ongoing</string>
	<string name="common_po_finished">Finished</string>
	<string name="common_po_select_artworks">Select from my artworks</string>
	<string name="common_emo_sticker_lovely"><![CDATA[\"Lovely\"]]></string>
	<string name="common_emo_sticker_awesome"><![CDATA[\"Awesome\"]]></string>
	<string name="common_emo_sticker_creative"><![CDATA[\"Creative\"]]></string>
	<string name="common_emo_sticker_fantastic"><![CDATA[\"Fantastic\"]]></string>
	<string name="common_emo_sticker_fun"><![CDATA[\"Fun\"]]></string>
	<string name="common_ph_search">Search by Name or Country</string>
	<string name="common_ph_title">Put a title here.</string>
	<string name="common_ios">iOS에서 만들어진 아트웍스입니다.</string>
	<string name="splash_sp_maintenance"><![CDATA[System down for maintenance.\nPlease wait, we"ll be back soon! :)]]></string>
	<string name="splash_sp_server_access"><![CDATA[We"re having problems with our server access.\nWe apologize for the inconvenience.\nPlease try again in a few minutes.]]></string>
	<string name="splash_sp_network_err"><![CDATA[The server is unresponsive.\nPlease check your internet connection, then try again.]]></string>
	<string name="logo_title1">Copyright 2012 The Clockworks</string>
	<string name="logo_title2">All Rights Reserved.</string>
	<string name="push_bigture_update">빅쳐가 업데이트되었어요. 새로운 빅쳐를 만나보세요!</string>
	<string name="push_artworks_sticker">%1$s님이 %2$s을 감상했습니다.</string>
	<string name="push_artworks_expert_sticker">%1$s %2$s님이 %3$s을 감상했습니다.</string>
	<string name="push_artworks_expert_comment">%1$s %2$s님이 %3$s에 감상 글을 남겼습니다.</string>
	<string name="push_artworks_reported">$s은 신고되어 다른 사람에게 보이지 않습니다.</string>
	<string name="push_artworks_removed">$s은 약관에 위배되어 삭제처리 되었습니다.</string>
	<string name="push_contest_start">$s 컨테스트가 개최되었습니다. 참가해 보세요!</string>
	<string name="push_contest_hurryup">$s 컨테스트 마감 하루 전입니다. 아직 참가하지 못한 아티스트는 서두르세요!</string>
	<string name="push_contest_winner">축하합니다! $s 에서 우수작으로 선정되었습니다!</string>
	<string name="push_likeu_notice">$s님이 Like U 하셨습니다.</string>
	<string name="push_picme_notice">$s님이 그림을 요청하였습니다. 지금 그려보세요!</string>
	<string name="push_postcard_notice">$s님이 엽서를 보냈습니다. 지금 확인해 보세요.</string>
	<string name="push_class_open">$s 클래스가 오픈 되었어요! 지금 참여해 보세요,</string>
	<string name="push_class_invite">%1$s %2$s님이 %3$s 클래스에 초대하였습니다. 지금 참여해보세요.</string>
	<string name="push_class_end">%1$s님이 참여했던 %2$s 클래스가 종료되었습니다.</string>
	<string name="push_class_puzzle_complete">$s 클래스에서 참여한 그림이 완성되었습니다! 감상해보세요.</string>
	<string name="push_story_open">$s 스토리가 오픈 되었어요! 지금 참여해 보세요.</string>
	<string name="push_story_invite">%1$s님이 %2$s 스토리로 초대하였습니다. 이야기에 어울리는 그림을 그려보세요!</string>
	<string name="label_welcome"><![CDATA[Welcome to Bigture!]]></string>
	<string name="label_create_or_login">Log in or Create</string>
	<string name="main_sp_bigture_update">There is a new update for Bigture. Would you like to download it?</string>
	<string name="main_sp_user_agreement_update"><![CDATA[[Bigture User Agreement Update]\nPlease check the following document for changes.]]></string>
	<string name="main_sp_privacy_agreement_update"><![CDATA[[Bigture Privacy Agreement Update]\nPlease check the following document for changes.]]></string>
	<string name="mybigture_tab_profile">Profile</string>
	<string name="mybigture_tab_like">Like list</string>
	<string name="mybigture_tab_postbox">Post box</string>
	<string name="mybigture_tab_news">News</string>
	<string name="mybigture_tab_carrer">Career</string>
	<string name="mybigture_tab_carrer_news"><![CDATA[Career & News]]></string>
	<string name="mybigture_tab_artworks">Artworks</string>
	<string name="mybigture_tab_story">Story</string>
	<string name="mybigture_tab_class">Class</string>
	<string name="mybigture_bindex_lovely"><![CDATA[\"warm and sensitive me\"]]></string>
	<string name="mybigture_bindex_awesome"><![CDATA[\"emotional me\"]]></string>
	<string name="mybigture_bindex_creative"><![CDATA[\"creative me\"]]></string>
	<string name="mybigture_bindex_fantastic"><![CDATA[\"expressive me\"]]></string>
	<string name="mybigture_bindex_fun"><![CDATA[\"funny me\"]]></string>
	<string name="mybigture_lb_more">View more...</string>
	<string name="mybigture_lb_add_career">Add my Career</string>
	<string name="mybigture_lb_add_news">Add my News</string>
	<string name="mybigture_lb_make_postcard">Make a postcard</string>
	<string name="mybigture_lb_isnt_postcard">There isn"t a postcard! Send one first!</string>
	<string name="mybigture_lb_postcard_choosepic">Touch here and choose a picture to send.</string>
	<string name="mybigture_lb_find_friends">Find Friends</string>
	<string name="mybigture_lb_all_place">All Place</string>
	<string name="mybigture_sp_del_career">Delete this career entry?</string>
	<string name="mybigture_sp_postcard_send">Do you want to send your postcard?</string>
	<string name="mybigture_sp_postcard_cancel"><![CDATA[Your message will be erased.\nAre you sure you want to leave now?]]></string>
	<string name="mybigture_sp_postcard_del">Delete this postcard?</string>
	<string name="mybigture_ph_news_input"><![CDATA[What"s new? Tell your friend!]]></string>
	<string name="mybigture_ph_add_career">Please enter your career.</string>
	<string name="mybigture_ph_postcard_email">(e-mail address)</string>
	<string name="mybigture_ph_postcard_entermsg">Enter the message for your friend(s).</string>
	<string name="mybigture_ph_postcard_title">Enter your artwork title.</string>
	<string name="mybigture_tp_news_ok">My News has been entered.</string>
	<string name="mybigture_tp_enter_news">Please input news.</string>
	<string name="mybigture_tp_deleted">Deleted.</string>
	<string name="mybigture_tp_likeu">You have Like U.</string>
	<string name="mybigture_tp_likeu_un">You have un-Like U.</string>
	<string name="mybigture_tp_picme">You asked your friend for a picture.</string>
	<string name="mybigture_tp_postcard_private">Changed property to secret.</string>
	<string name="mybigture_tp_postcard_public">Changed property to public.</string>
	<string name="mybigture_tp_postcard_sent">The postcard has been sent.</string>
	<string name="mybigture_tp_enter_email">Enter your email.</string>
	<string name="mybigture_po_artworks">Artworks</string>
	<string name="mybigture_po_contest">Contest</string>
	<string name="mybigture_po_draw_now">Draw now</string>
	<string name="mybigture_po_send_from_artworks">Send from my artworks</string>
	<string name="artworks_po_save_image">Save as Image</string>
	<string name="artworks_po_share_others">Share on Others</string>
	<string name="artworks_po_send_postcard">Send a Postcard</string>
	<string name="artworks_po_edit_artwork">Edit this artwork</string>
	<string name="artworks_po_delete">Delete</string>
	<string name="sketchbook_ph_draft_title">Title your Draft.</string>
	<string name="sketchbook_lb_save_draft">Save Draft</string>
	<string name="info_guide_07_title">You can see all the pictures you drew, in one spot! Try filling this place with unique pictures!</string>
	<string name="info_guide_07_subtitle1">Bigture Index</string>
	<string name="info_guide_07_description1">I wonder what my trend is?</string>
	<string name="info_guide_07_subtitle2">Friendship</string>
	<string name="info_guide_07_description2">Like U my favorite artist</string>
	<string name="label_enter_email_pwd">Please enter your Email ID and Password.</string>
	<string name="label_keep_me_logged_in">Keep me logged in</string>
	<string name="label_forgot_password">Forgot password</string>
	<string name="label_login_with_facebook">Log in with facebook</string>
	<string name="label_login_with_twitter">Log in with Twitter</string>
	<string name="label_login_not_exist"><![CDATA[This account does not exist.\nPlease register first.]]></string>
	<string name="label_forgot_pwd_3">We sent you a</string>
	<string name="label_forgot_pwd_4">temporary password to your</string>
	<string name="label_forgot_pwd_5">Please make sure to change your password after you login.</string>
	<string name="account_menu_login">Log in</string>
	<string name="account_menu_create">Create account</string>
	<string name="account_btn_login">Log in</string>
	<string name="account_ph_login_pwd">Password</string>
</resources>