<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:padding="0dp"
     >
     <ImageView 
         android:id="@+id/imgArtwork"
         android:layout_width="136dp"
         android:layout_height="126dp"
         android:src="@drawable/infocenter_look_icons_mybigture"
         android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         />
     <TextView 
         android:id="@+id/title"
         android:layout_below="@+id/imgArtwork"
         android:layout_width="fill_parent"
         android:layout_height="42dp"
         android:text="@string/common_lb_menu_mybigture"
         android:layout_marginTop="34dp"
         android:textSize="20dp"
         android:textStyle="bold"
         android:textColor="#d7483c"
         android:gravity="top|center_horizontal"
         />
     <TextView 
         android:layout_below="@+id/title"
         android:id="@+id/lookText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:textSize="15dp"
         android:text="@string/info_guide_07_title"
         android:lineSpacingExtra="5dp"
         android:textColor="#555555"
         android:gravity="top|center_horizontal"
         />
    
     <RelativeLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:padding="16dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"         
         android:background="#f5f3f0"
         >
         <ImageView
             android:id="@+id/icon1"
             android:layout_width="36dp"
             android:layout_height="36dp"
         	 android:src="@drawable/infocenter_look_icons_mini_index"
         	 />
          <TextView 
              android:id="@+id/text1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16dp"
              android:textColor="#6d6e71"
              android:textStyle="bold"
              android:text="@string/info_guide_07_subtitle1"
              android:layout_toRightOf="@+id/icon1"
              android:layout_marginLeft="10dp"
              />
         <TextView 
              android:id="@+id/text2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="14dp"
              android:textColor="#6d6e71"
              android:text="@string/info_guide_07_description1"
              android:layout_below="@+id/text1"
              android:layout_alignLeft="@+id/text1"
              />
         <ImageView
             android:id="@+id/icon2"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginTop="16dp"
         	 android:src="@drawable/infocenter_look_icons_mini_like"
         	 android:layout_below="@+id/icon1"
         	 />
          <TextView 
              android:id="@+id/text3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16dp"
              android:textColor="#6d6e71"
              android:textStyle="bold"
              android:text="@string/info_guide_07_subtitle2"
              android:layout_alignTop="@+id/icon2"
              android:layout_toRightOf="@+id/icon2"
              android:layout_marginLeft="10dp"
              />
         <TextView 
              android:id="@+id/text4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="14dp"
              android:textColor="#6d6e71"
              android:text="@string/info_guide_07_description2"
              android:layout_below="@+id/text3"
              android:layout_alignLeft="@+id/text3"
              />
     </RelativeLayout>
     
     
     
</RelativeLayout>