<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="360dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="56dp"
        android:padding="16dp"
         >

       <EditText
            android:id="@+id/editFilename"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/sketchbook_ph_draft_title"
            android:paddingLeft="13dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="#555555"
            android:textColorHint="#aaaaaa" >
			
            <requestFocus />
        </EditText>


    </RelativeLayout>
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@drawable/common_popup_navigation_bg_pattern" >

       <Button
            android:id="@+id/btnCancel"
            android:layout_width="69dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dp"
            android:background="@drawable/selector_btn_popup"
            android:paddingLeft="10dp"
            android:text="@string/common_btn_cancel"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="71dp"
            android:layout_height="36dp"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/selector_btn_popup_red"
            android:text="@string/common_btn_ok"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/sketchbook_lb_save_draft"
            android:textSize="18dp"
            android:textColor="#717880"
            android:textStyle="bold" />

    </RelativeLayout>
	<LinearLayout 
	     android:layout_width="match_parent"
	     android:layout_height="3dp"
	     android:layout_marginTop="54dp"
	     android:background="@drawable/common_popup_navigation_shadow_pattern"/>
</FrameLayout>