<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="540dp"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/viewContainer"
        android:layout_width="540dp"
        android:layout_height="626dp"
        android:layout_marginTop="56dp"
        android:padding="0dp"
        android:background="@drawable/common_popup_bg"
        android:gravity="center_horizontal"
        android:measureWithLargestChild="true" 
        android:orientation="vertical"
        >
        
        <include layout="@layout/view_account_login" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="540dp"
        android:layout_height="56dp"
        android:background="@drawable/common_popup_navigation_bg" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/selector_btn_popup_back"
            android:paddingLeft="10dp"
            android:text="@string/common_btn_back"
            android:textSize="16dp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/selector_btn_popup"
            android:text="@string/common_btn_cancel"
            android:textSize="16dp"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/account_menu_login"
            android:textSize="20dp"
            android:textColor="@color/popup_title"
            android:textStyle="bold" />

    </RelativeLayout>
	<LinearLayout 
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="56dp"
	     android:background="@drawable/common_popup_navigation_shadow_pattern"/>
</FrameLayout>